Table teams {
  team_id SERIAL [PRIMARY KEY]
  name VARCHAR [UNIQUE, NOT NULL]
}

Table games {
  game_id SERIAL [PRIMARY KEY]
  year INT [NOT NULL]
  round VARCHAR [NOT NULL]
  winner_id INT [ref: - teams.team_id, NOT NULL]
  opponent_id INT [ref: - teams.team_id, NOT NULL]
  winner_goals INT [NOT NULL]
  opponent_goals INT [NOT NULL]
}
